{
  "version": 4,
  "terraform_version": "1.10.5",
  "serial": 12,
  "lineage": "d0bc40d0-7e46-4541-1054-d43e91ac1193",
  "resources": [
    {
      "module": "module.vpc_module",
      "mode": "managed",
      "type": "aws_eip",
      "name": "dev_eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-05c79cb36004d35ab",
            "arn": "arn:aws:ec2:us-east-1:515966508922:elastic-ip/eipalloc-05c79cb36004d35ab",
            "associate_with_private_ip": "10.81.1.33",
            "association_id": "eipassoc-0464e3cc4bba58538",
            "domain": "vpc",
            "id": "eipalloc-05c79cb36004d35ab",
            "network_border_group": "us-east-1",
            "network_interface": "eni-059d7aade2f1ece7e",
            "private_dns": "ip-10-81-1-33.ec2.internal",
            "private_ip": "10.81.1.33",
            "public_dns": "ec2-34-199-188-142.compute-1.amazonaws.com",
            "public_ip": "34.199.188.142",
            "public_ipv4_pool": "amazon",
            "vpc": true
          },
          "dependencies": [
            "module.vpc_module.aws_network_interface.dev_nic",
            "module.vpc_module.aws_security_group.dev_sg",
            "module.vpc_module.aws_subnet.dev_sn",
            "module.vpc_module.aws_vpc.dev_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_module",
      "mode": "managed",
      "type": "aws_instance",
      "name": "dev",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0df8c184d5f6ae949",
            "arn": "arn:aws:ec2:us-east-1:515966508922:instance/i-0e04393c79b8d9c1d",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1f",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0e04393c79b8d9c1d",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "key_name": "aws",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "network_interface": [
              {
                "delete_on_termination": false,
                "device_index": 0,
                "network_card_index": 0,
                "network_interface_id": "eni-059d7aade2f1ece7e"
              }
            ],
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-059d7aade2f1ece7e",
            "private_dns": "ip-10-81-1-33.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.81.1.33",
            "public_ip": "34.199.188.142",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-05174b05cf8b33f68",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-083bc1e4c1df87024",
            "tags": {
              "Name": "Paddu"
            },
            "tags_all": {
              "Name": "Paddu"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0ced4850046219ba3"
            ]
          },
          "dependencies": [
            "module.vpc_module.aws_network_interface.dev_nic",
            "module.vpc_module.aws_security_group.dev_sg",
            "module.vpc_module.aws_subnet.dev_sn",
            "module.vpc_module.aws_vpc.dev_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_module",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "dev_igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:515966508922:internet-gateway/igw-03af4e4918ce0e892",
            "id": "igw-03af4e4918ce0e892",
            "owner_id": "515966508922",
            "tags": {
              "Name": "dev_igw"
            },
            "tags_all": {
              "Name": "dev_igw"
            },
            "vpc_id": "vpc-09f2f2cde0c881e57"
          },
          "dependencies": [
            "module.vpc_module.aws_vpc.dev_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_module",
      "mode": "managed",
      "type": "aws_network_interface",
      "name": "dev_nic",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:515966508922:network-interface/eni-059d7aade2f1ece7e",
            "id": "eni-059d7aade2f1ece7e",
            "interface_type": "interface",
            "ipv4_prefix_count": 0,
            "ipv6_address_count": 0,
            "ipv6_address_list_enabled": false,
            "ipv6_prefix_count": 0,
            "mac_address": "16:ff:c5:1c:7a:71",
            "owner_id": "515966508922",
            "private_ip": "10.81.1.33",
            "private_ip_list": [
              "10.81.1.33"
            ],
            "private_ip_list_enabled": false,
            "private_ips": [
              "10.81.1.33"
            ],
            "private_ips_count": 0,
            "security_groups": [
              "sg-0ced4850046219ba3"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-083bc1e4c1df87024",
            "tags": {
              "Name": "Dev_nic"
            },
            "tags_all": {
              "Name": "Dev_nic"
            }
          },
          "dependencies": [
            "module.vpc_module.aws_security_group.dev_sg",
            "module.vpc_module.aws_subnet.dev_sn",
            "module.vpc_module.aws_vpc.dev_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_module",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "dev_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:515966508922:route-table/rtb-0c66319bd425f1621",
            "id": "rtb-0c66319bd425f1621",
            "owner_id": "515966508922",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-03af4e4918ce0e892",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "dev_rt"
            },
            "tags_all": {
              "Name": "dev_rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-09f2f2cde0c881e57"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc_module.aws_internet_gateway.dev_igw",
            "module.vpc_module.aws_vpc.dev_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_module",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "dev_rta",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0ba0938614d90356b",
            "route_table_id": "rtb-0c66319bd425f1621",
            "subnet_id": "subnet-083bc1e4c1df87024"
          },
          "dependencies": [
            "module.vpc_module.aws_internet_gateway.dev_igw",
            "module.vpc_module.aws_route_table.dev_rt",
            "module.vpc_module.aws_subnet.dev_sn",
            "module.vpc_module.aws_vpc.dev_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_module",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "dev_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:515966508922:security-group/sg-0ced4850046219ba3",
            "description": "Dev Security Group",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0ced4850046219ba3",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "name": "terraform-20250127161850014900000001",
            "name_prefix": "terraform-",
            "owner_id": "515966508922",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "dev_sg"
            },
            "tags_all": {
              "Name": "dev_sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-09f2f2cde0c881e57"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc_module.aws_vpc.dev_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_module",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "dev_sn",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:515966508922:subnet/subnet-083bc1e4c1df87024",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1f",
            "availability_zone_id": "use1-az5",
            "cidr_block": "10.81.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-083bc1e4c1df87024",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "515966508922",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "dev_sn"
            },
            "tags_all": {
              "Name": "dev_sn"
            },
            "vpc_id": "vpc-09f2f2cde0c881e57"
          },
          "dependencies": [
            "module.vpc_module.aws_vpc.dev_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_module",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "dev_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:515966508922:vpc/vpc-09f2f2cde0c881e57",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.81.0.0/16",
            "default_network_acl_id": "acl-0cc1eb73b69d29a00",
            "default_route_table_id": "rtb-08c7230a5954bf4fc",
            "default_security_group_id": "sg-093e75ba3e8a27a1b",
            "dhcp_options_id": "dopt-01533c4e99d22f677",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-09f2f2cde0c881e57",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-08c7230a5954bf4fc",
            "owner_id": "515966508922",
            "tags": {
              "Name": "dev_vpc"
            },
            "tags_all": {
              "Name": "dev_vpc"
            }
          }
        }
      ]
    }
  ]
}